<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView android:text="@string/app_name_title" android:layout_width="match_parent" android:id="@+id/titleLabel"
        android:layout_height="wrap_content" android:textColor="@color/text" android:textSize="@dimen/abc_text_size_headline_material" android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnSpotify"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:text="@string/spotify"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnScores"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:text="@string/scores"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnLibrary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:text="@string/library"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnBigger"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:text="@string/buildit"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnXYZ"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:text="@string/reader"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnCapstone"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:minWidth="200dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/capstone"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        </LinearLayout>




</LinearLayout>
